--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prettier": "^2.5.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-vue": "^8.5.0",
     "vite": "^2.8.0"
   }
 }
