Prettier設定ファイルをリネーム

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "prettier.configPath": "prettierrc.yml"
+  "prettier.configPath": ".prettierrc.yml"
 }
