--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,7 +4,7 @@ env:
   node: true
 extends:
   - eslint:recommended
-  - plugin:vue/essential
+  - prettier
 parserOptions:
   ecmaVersion: latest
   sourceType: module
