--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,10 @@ env:
   browser: true
   es2021: true
   node: true
+  vue/setup-compiler-macros: true
 extends:
   - eslint:recommended
+  - plugin:vue/vue3-recommended
   - prettier
 parserOptions:
   ecmaVersion: latest
